Stop collapsible symbol wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@
 
 .collapsible {
 	cursor: pointer;
+	white-space: nowrap;
 }
 
 .collapsible:after {
